# scicomp-p1-ants-river

./: PLANNING.md  README.md  TASK_TABLE.md  main.py  pyproject.toml  requirements.txt
src/: interface_matplotlib.py  interface_pygame.py  interface_toolbar_old.py  model.py  test_model.py
