[project]
name = "scicomp-p1-ants"
version = "0.1.0"
description = "Ant simulation project for Scientific Computing SP26, seeking to replicate Watmough and Edelstein-Keshet, 1995."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
